--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div class="container">
             <img src="pack/logo3.svg" alt="logo.svg">
             <nav>
-                <a href="index.html">Início</a>
-                <a href="https://www.instagram.com/atleticaffp/" target="_blank">Instagram</a>
-                <a href="https://linktr.ee/piratasffp" target="_blank">Produtos</a>
-                <a href="https://www.instagram.com/direct/t/118233572894860" target="_blank">Contato</a>
+                <a href="index.html">INÍCIO</a>
+                <a href="https://www.instagram.com/atleticaffp/" target="_blank">INSTA</a>
+                <a href="https://linktr.ee/piratasffp" target="_blank">LINKTR.EE</a>
+                <a href="https://www.instagram.com/direct/t/118233572894860" target="_blank">CONTATO</a>
             </nav>
-            <a href="#" class="button nt-1 nb-1 nx-auto">Se inscreva</a>
+            <a href="https://www.instagram.com/direct/t/118233572894860" target="blank" class="button nt-1 nb-1 nx-auto">Faça parte!</a>
         </div>
     </header>
     <main>
