1 letra maiúscula na nav

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div class="container">
             <img src="pack/logo3.svg" alt="logo.svg">
             <nav>
-                <a href="index.html">INÍCIO</a>
-                <a href="https://www.instagram.com/atleticaffp/" target="_blank">INSTA</a>
-                <a href="https://linktr.ee/piratasffp" target="_blank">LINKTR.EE</a>
-                <a href="https://www.instagram.com/direct/t/118233572894860" target="_blank">CONTATO</a>
+                <a href="index.html">Início</a>
+                <a href="https://www.instagram.com/atleticaffp/" target="_blank">Insta</a>
+                <a href="https://linktr.ee/piratasffp" target="_blank">Linktr.ee</a>
+                <a href="https://www.instagram.com/direct/t/118233572894860" target="_blank">Contato</a>
             </nav>
             <a href="https://www.instagram.com/direct/t/118233572894860" target="blank" class="button nt-1 nb-1 nx-auto">Faça parte!</a>
         </div>
