tirei o lorem final

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="about-column">
                 <img src="pack/logo3.svg" alt="lobatinho" class="nt-1 nb-1">
-                <p class="nb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum exercitationem ratione at inventore distinctio sint pariatur recusandae molestias ad natus illo consequuntur officia nesciunt cum, aliquid corporis accusamus et molestiae?</p>
+                <p class="nb-2">Descubra o fascinante mundo da Atlética Piratas FFP! Junte-se a nós para uma jornada única repleta de álcool, competições emocionantes e eventos memoráveis. Sinta essa energia, fortaleça laços e crie memórias inesquecíveis. Seja parte desta experiência extraordinária. Bem-vindo a bordo! Bem vindos aos Piratas!</p>
             </div>
     
             <nav class="nb-2">
