--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h1 class="nt-2 nb-2">A COPA <span class="text-primary decoration"> PIRATA</span> de 2024.1!</h1>
                     <p class="nb-2 nx-auto">Nossa <strong>principal competição</strong> da Universidade do Estado do Rio de Janeiro, está mais uma vez marcada, mobilizando o coração de todos os apaixonados por esse esporte! <strong>A COPA UERJ 2024.1</strong> promete ser a maior e melhor copa já mobilizada dentro da Universidade.<br><br>
                     Abaixo, a <strong>classificação</strong> e o <strong>calendário</strong> de jogos! Vem ser feliz com a A. Atlética Piratas FFP!  </p>
-                    <a href="https://www.instagram.com/direct/t/118233572894860" target="_blank" class="button nt-1 nb-1">COPA PIRATA 2024.1!</a>
+                    <a href="copapirata/copapirata.html" target="_blank" class="button nt-1 nb-1">COPA PIRATA 2024.1!</a>
                     <!-- <h1 class="nt-2 nb-2"><span class="text-primary decoration"> Ser PIRATA</span> é um CARNAVAL</h1>
                     <p class="nb-2 nx-auto">Já se imaginaram desbravando os 7 mares com a melhor tripulação que existe? Já sonharam com jogar como <strong>CAPITÃES</strong> e beber como <strong>MARUJOS</strong>? Já passou pelos seus olhos o vislumbre de conquistar o mundo?<br><br>
                     Embarque no navio <strong>PIRATA</strong> conosco!  </p>
