--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="pack/logo3.svg" alt="logo.svg">
+            <img src="pack/logonova2.svg" alt="logo.svg">
             <nav>
                 <a href="index.html">Início</a>
                 <a href="https://www.instagram.com/atleticaffp/" target="_blank">Insta</a>
