--- a/index.html
+++ b/index.html
@@ -38,30 +38,45 @@
         <section class="courses-section">
             <div class="cards">
                 <article class="card">
-                    <img class="littlecard" src="pack/thatha5050.png" alt="img/piano.png">
-                    <strong class="textobranco">João Athayde</strong>
-                    <p class="textobranco">Desde que entrei pros PIRATAS, até mesmo o HOLANDÊS VOADOR passou a me respeitar! </p>
+                    <img class="littlecard" src="pack/biocard.png" alt="bio.png">
+                    <strong class="textobranco">BIOLORGIA</strong>
+                    <p class="textobranco">TEXTOBIOLORGIA TEXTOBIOLORGIA TEXTOBIOLORGIA </p>
                     <a href="#">
                         <img src="pack/arrow-right.svg" alt="img/arrow-right.svg"></a>
                 </article>
                 <article class="card">
-                    <img class="littlecard" src="pack/paulista5050.png" alt="clef.png">
-                    <strong>Arthur Paulista</strong>
-                    <p>Quando soube que os PIRATAS estavam recrutando, arrumei minhas coisas e vim de São Paulo pra fazer parte dessa HISTÓRIA!</p>
+                    <img class="littlecard" src="pack/euccard.png" alt="euc.png">
+                    <strong>EUCLIDIANOS</strong>
+                    <p>TEXTOEUCLIDIANOS TEXTOEUCLIDIANOS TEXTOEUCLIDIANOS TEXTOEUCLIDIANOS TEXTOEUCLIDIANOS </p>
+                    <a href="#">
+                        <img src="pack/arrow-right.svg" alt="img/arrow-right.svg"></a>
+                </article>
+                <article class="card">
+                    <img class="littlecard" src="pack/geocard.png" alt="geo.png">
+                    <strong class="textobranco">GEOCRIAS</strong>
+                    <p class="textobranco">Composto só por estudantes da geo é o maior time da geografia uerj ffp.
+                        Atual campeão da copa pirata 2023 🏆</p>
+                    <a href="#">
+                        <img src="pack/arrow-right.svg" alt="img/arrow-right.svg"></a>
+                </article>
+                <article class="card">
+                    <img class="littlecard" src="pack/moncard.png" alt="mon.png">
+                    <strong>MONTESQUIEU</strong>
+                    <p>TEXTOMONTESQUIEU TEXTOMONTESQUIEU TEXTOMONTESQUIEU TEXTOMONTESQUIEU</p>
                     <a href="#">
                         <img src="pack/arrow-right.svg" alt="sax.png"></a>
                 </article>
                 <article class="card">
-                    <img class="littlecard" src="pack/fillipe5050.png" alt="drums.png">
-                    <strong class="textobranco">Fillipe Costa</strong>
-                    <p class="textobranco">Meu sonho de criança era ser o JACK SPARROW. A vida me fez historiador e a FFP me fez PIRATA!</p>
+                    <img class="littlecard" src="pack/npncard.png" alt="npn.png">
+                    <strong class="textobranco">NÃO PROMETO NADA</strong>
+                    <p class="textobranco">TEXTONPN TEXTONPN TEXTONPN TEXTONPN TEXTONPN TEXTONPN </p>
                     <a href="#">
                         <img src="pack/arrow-right.svg" alt="arrow-right.svg"></a>
                 </article>
                 <article class="card">
-                    <img class="littlecard" src="pack/bray5050.png" alt="drums.png">
-                    <strong>Brayner Cruz</strong>
-                    <p>A sensação em campeonato é muito diferente! Nos olham com medo. Ser PIRATA muda o jogo. É indescritível! Vem sentir essa energia, vem ser PIRATA!</p>
+                    <img class="littlecard" src="pack/urscard.png" alt="urs.png">
+                    <strong>URSAL</strong>
+                    <p>TEXTOURSAL TEXTOURSAL TEXTOURSAL TEXTOURSAL TEXTOURSAL TEXTOURSAL TEXTOURSAL </p>
                     <a href="#">
                         <img src="pack/arrow-right.svg" alt="arrow-right.svg"></a>
                 </article>
