commit size cards

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                 <article class="card">
                     <img class="littlecard" src="pack/biocard.png" alt="bio.png">
                     <strong class="textobranco">BIOLORGIA</strong>
-                    <p class="textobranco">TEXTOBIOLORGIA TEXTOBIOLORGIA TEXTOBIOLORGIA </p>
+                    <p class="textobranco">Vem com tudo, torcida Biolorgia! Com ciência e energia, vamos contagiar o campo. É biologia no coração!</p>
                     <a href="#">
                         <img src="pack/arrow-right.svg" alt="img/arrow-right.svg"></a>
                 </article>
                 <article class="card">
                     <img class="littlecard" src="pack/euccard.png" alt="euc.png">
                     <strong>EUCLIDIANOS</strong>
-                    <p>TEXTOEUCLIDIANOS TEXTOEUCLIDIANOS TEXTOEUCLIDIANOS TEXTOEUCLIDIANOS TEXTOEUCLIDIANOS </p>
+                    <p>Partiu, torcida dos Euclidianos! Com geometria e diversão, vamos conquistar a vitória. É matemática pura e emoção!</p>
                     <a href="#">
                         <img src="pack/arrow-right.svg" alt="img/arrow-right.svg"></a>
                 </article>
@@ -62,21 +62,21 @@
                 <article class="card">
                     <img class="littlecard" src="pack/moncard.png" alt="mon.png">
                     <strong>MONTESQUIEU</strong>
-                    <p>TEXTOMONTESQUIEU TEXTOMONTESQUIEU TEXTOMONTESQUIEU TEXTOMONTESQUIEU</p>
+                    <p>Somos o time dos 3 poderes: quem fuma, quem bebe e quem cheira! O maior AURINEGRO da história da FFP!</p>
                     <a href="#">
                         <img src="pack/arrow-right.svg" alt="sax.png"></a>
                 </article>
                 <article class="card">
                     <img class="littlecard" src="pack/npncard.png" alt="npn.png">
                     <strong class="textobranco">NÃO PROMETO NADA</strong>
-                    <p class="textobranco">TEXTONPN TEXTONPN TEXTONPN TEXTONPN TEXTONPN TEXTONPN </p>
+                    <p class="textobranco">Seja parte da torcida vibrante! Garra, talento e surpresas nos esperam! Juntos, rumo à vitória!</p>
                     <a href="#">
                         <img src="pack/arrow-right.svg" alt="arrow-right.svg"></a>
                 </article>
                 <article class="card">
                     <img class="littlecard" src="pack/urscard.png" alt="urs.png">
                     <strong>URSAL</strong>
-                    <p>TEXTOURSAL TEXTOURSAL TEXTOURSAL TEXTOURSAL TEXTOURSAL TEXTOURSAL TEXTOURSAL </p>
+                    <p>Torcida apaixonada, venha apoiar o URSAL, nosso time de garra e talento! Juntos, rumo à vitória! Futebol com paixão no coração </p>
                     <a href="#">
                         <img src="pack/arrow-right.svg" alt="arrow-right.svg"></a>
                 </article>
