commit header pagina copa

--- a/copapirata/copapirata.html
+++ b/copapirata/copapirata.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="css/stylecopapirata.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <img src="images/logonova2.svg" alt="logo.svg">
+            <nav>
+                <a href="index.html">Início</a>
+                <a href="https://www.instagram.com/atleticaffp/" target="_blank">Insta</a>
+                <a href="https://linktr.ee/piratasffp" target="_blank">Linktr.ee</a>
+                <a href="https://www.instagram.com/direct/t/118233572894860" target="_blank">Contato</a>
+            </nav>
+            <a href="../index.html" target="blank" class="button nt-1 nb-1 nx-auto">Página Inicial</a>
+        </div>
+    </header>
     <main>
         <h1>Classificação Copa Pirata 2024.1</h1>
         <h2>Grupo Único!</h2>
