commit logo nova copa

--- a/copapirata/copapirata.html
+++ b/copapirata/copapirata.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="images/logonova2.svg" alt="logo.svg">
+            <img src="images/PIRATASVG2.svg" alt="logo.svg">
             <nav>
                 <a href="index.html">Início</a>
                 <a href="https://www.instagram.com/atleticaffp/" target="_blank">Insta</a>
