--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <div class="container">
-            <img src="pack/logonova2.svg" alt="logo.svg">
+            <!-- teste -->
+            <a class="logo" href="https://www.instagram.com/direct/t/118233572894860" target="_blank"><img src="pack/logonova2.svg" alt="logo.svg"></a></img>
             <nav>
                 <a href="index.html">Início</a>
                 <a href="https://www.instagram.com/atleticaffp/" target="_blank">Insta</a>
@@ -84,7 +85,7 @@
                 
                     <section class="textodpscard">
                         <h2 class="text-center nx-auto"><span class="text-primary decoration"> Ser PIRATA</span> é um CARNAVAL</h2>
-                        <p class="text-center nb-2 nx-auto max">Já se imaginaram desbravando os 7 mares com a melhor tripulação que existe? Já sonharam com jogar como <strong>CAPITÃES</strong> e beber como <strong>MARUJOS</strong>? Já passou pelos seus olhos o vislumbre de conquistar o mundo?<br><br>
+                        <p class="text-center nb-2 nx-auto">Já se imaginaram desbravando os 7 mares com a melhor tripulação que existe? Já sonharam com jogar como <strong>CAPITÃES</strong> e beber como <strong>MARUJOS</strong>? Já passou pelos seus olhos o vislumbre de conquistar o mundo?<br><br>
                         Embarque no navio <strong>PIRATA</strong> conosco!  </p>
                         <a href="https://www.instagram.com/direct/t/118233572894860" target="_blank" class="button nt-2 nx-auto">Vem conhecer!</a>
                     </section>
