link da nav pra torcida

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <a class="logo" href="https://www.instagram.com/direct/t/118233572894860" target="_blank"><img src="pack/logonova2.svg" alt="logo.svg"></a></img>
             <nav>
                 <a href="index.html">Início</a>
-                <a href="https://www.instagram.com/atleticaffp/" target="_blank">Insta</a>
-                <a href="https://linktr.ee/piratasffp" target="_blank">Linktr.ee</a>
-                <a href="https://www.instagram.com/direct/t/118233572894860" target="_blank">Contato</a>
+                <a href="https://www.instagram.com/atleticaffp/" target="_blank">Instagram</a>
+                <a href="https://www.instagram.com/atleticaffp/" target="_blank">Contato</a>
+                <a href="https://www.instagram.com/stories/highlights/18028750858473451/" target="_blank">Torcida</a>
             </nav>
             <a href="./copapirata/copapirata.html" target="blank" class="button nt-1 nb-1 nx-auto">COPA PIRATA!</a>
         </div>
@@ -87,7 +87,7 @@
                         <h2 class="text-center nx-auto"><span class="text-primary decoration"> Ser PIRATA</span> é um CARNAVAL</h2>
                         <p class="text-center nb-2 nx-auto">Já se imaginaram desbravando os 7 mares com a melhor tripulação que existe? Já sonharam com jogar como <strong>CAPITÃES</strong> e beber como <strong>MARUJOS</strong>? Já passou pelos seus olhos o vislumbre de conquistar o mundo?<br><br>
                         Embarque no navio <strong>PIRATA</strong> conosco!  </p>
-                        <a href="https://www.instagram.com/direct/t/118233572894860" target="_blank" class="button nt-2 nx-auto">Vem conhecer!</a>
+                        <a href="https://www.instagram.com/atleticaffp/" target="_blank" class="button nt-2 nx-auto">Vem conhecer!</a>
                     </section>
 
                 <!-- RASCUNHO ANTIGO <h1 class="nt-2 nb-2"><span class="text-primary decoration"> Ser PIRATA</span> é um CARNAVAL</h1>
