--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             <nav class="nb-2">
                 <a href="index.html">Início</a>
                 <a href="https://www.instagram.com/atleticaffp/" target="_blank">Instagram</a>
-                <a href="https://linktr.ee/piratasffp" target="_blank">Produtos</a>
-                <a href="https://www.instagram.com/direct/t/118233572894860">Contato</a>
+                <a href="https://www.instagram.com/stories/highlights/18028750858473451/" target="_blank">Torcida</a>
+                <a href="https://www.instagram.com/atleticaffp">Contato</a>
             </nav>
             <form class="newsletter-form" method="post" action="https://formsubmit.co/piratasffp@gmail.com">
                 <label for="Nome" class="nb-1">Quer fazer parte da nossa história?
