--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piratas</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="pack/favicon.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="pack/favicon.svg">
+
 </head>
 <body>
     <header>
