--- a/copapirata/montesquieu.html
+++ b/copapirata/montesquieu.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Montesquieu Futebol e Cerveja">
+    <meta property="og:description" content="Página dedicada ao Montesquieu Futebol e Cerveja">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="https://piratasffp.vercel.app/copapirata/montesquieu.html">
+    
     <title>Montesquieu</title>
     <link rel="stylesheet" href="./css/csstimes.css">
+    <link rel="icon" href="../pack/favicon.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="../pack/favicon.svg">
 </head>
 <body>
     <header>
