--- a/copapirata/montesquieu.html
+++ b/copapirata/montesquieu.html
@@ -19,9 +19,9 @@
             <img src="images/PIRATASVG2.svg" alt="logo.svg">
             <nav>
                 <a href="index.html">Início</a>
-                <a href="https://www.instagram.com/atleticaffp/" target="_blank">Insta</a>
-                <a href="https://linktr.ee/piratasffp" target="_blank">Linktr.ee</a>
-                <a href="https://www.instagram.com/direct/t/118233572894860" target="_blank">Contato</a>
+                <a href="https://www.instagram.com/atleticaffp/" target="_blank">Instagram</a>
+                <a href="https://linktr.ee/piratasffp" target="_blank">Contato</a>
+                <a href="https://www.instagram.com/stories/highlights/18028750858473451/" target="_blank">Torcida</a>
             </nav>
             <a href="../index.html" target="blank" class="button nt-1 nb-1 nx-auto">Página Inicial</a>
         </div>
