--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <!-- teste -->
-            <a class="logo" href="https://www.instagram.com/direct/t/118233572894860" target="_blank"><img src="pack/logonova2.svg" alt="logo.svg"></a></img>
+            <a class="logo" href="#" target="_blank"><img src="pack/logonova2.svg" alt="logo.svg"></a></img>
             <nav>
                 <a href="index.html">Início</a>
                 <a href="https://www.instagram.com/atleticaffp/" target="_blank">Instagram</a>
