commit link insta mont

--- a/copapirata/montesquieu.html
+++ b/copapirata/montesquieu.html
@@ -35,7 +35,8 @@
             <img class="img1" src="images/times/montesquieu/Montesca Logo.svg" alt="Escudo do Montesquieu">
             <img class="img2" src="images/times/montesquieu/TJM porraaaaaaaa.png" alt="escudo da Torcida Jovem do Montesquieu">        
         </div>
-        <p>Com uma torcida apaixonada, o time composto por sua maioria de Historiadores possui uma identificação muito forte com a Copa Pirata e com a Santiago's Arena.</p>
+        <p>Com uma torcida apaixonada, o time composto por sua maioria de Historiadores possui uma identificação muito forte com a Copa Pirata e com a Santiago's Arena, palco onde nossas alegrias entram em comunhão e sintonia.</p>
+        <p class="linkinstamon">Costumamos sempre divulgar nossos passos no <a href="https://www.instagram.com/montesquieu.ffp"><strong>instagram</strong></a> do clube</p>
 
         <!-- PRECISA FAZER PÁGINA DE TODOS OS TIMES PRA SUBI-LAS JUNTO -->
     </main>
