commit texto npn + max height no card

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <article class="card">
                     <img class="littlecard" src="pack/npncard.png" alt="npn.png">
                     <strong class="textobranco">NÃO PROMETO NADA</strong>
-                    <p class="textobranco">Seja parte da torcida vibrante! Garra, talento e surpresas nos esperam! Juntos, rumo à vitória!</p>
+                    <p class="textobranco">Também conhecido como o mais carismático da FFP, é uma agremiação esportiva que abrange todos os cursos da UERJ de São Gonçalo.</p>
                     <a href="#">
                         <img src="pack/arrow-right.svg" alt="arrow-right.svg"></a>
                 </article>
