--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <article class="card">
                     <img class="littlecard" src="pack/urscard.png" alt="urs.png">
                     <strong>URSAL</strong>
-                    <p>Torcida apaixonada, venha apoiar o URSAL, nosso time de garra e talento! Juntos, rumo à vitória! Futebol com paixão no coração </p>
+                    <p>A tropa de comunistas da FFP, é o VERDADEIRO Time mais carismático da UERJ! Onde chegamos, somos assunto! Vem com a tropa do URSO!🐻</p>
                     <a href="#">
                         <img src="pack/arrow-right.svg" alt="arrow-right.svg"></a>
                 </article>
