commit link campeonato

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="https://www.instagram.com/atleticaffp/" target="_blank">Contato</a>
                 <a href="https://www.instagram.com/stories/highlights/18028750858473451/" target="_blank">Torcida</a>
             </nav>
-            <a href="./copapirata/copapirata.html" target="blank" class="button nt-1 nb-1 nx-auto">COPA PIRATA!</a>
+            <a href="https://copafacil.com/copauerjatleticapiratas" target="blank" class="button nt-1 nb-1 nx-auto">COPA PIRATA!</a>
         </div>
     </header>
     <main>
@@ -30,7 +30,7 @@
                     <h1 class="nt-2 nb-2">A COPA <span class="text-primary decoration"> PIRATA</span> de 2024.1!</h1>
                     <p class="nb-2 nx-auto">Nossa <strong>principal competição</strong> da Universidade do Estado do Rio de Janeiro, está mais uma vez marcada, mobilizando o coração de todos os apaixonados por esse esporte! <strong>A COPA UERJ 2024.1</strong> promete ser a maior e melhor copa já mobilizada dentro da Universidade.<br><br>
                     Abaixo, a <strong>classificação</strong> e o <strong>calendário</strong> de jogos! Vem ser feliz com a A. Atlética Piratas FFP!  </p>
-                    <a href="copapirata/copapirata.html" target="_blank" class="button nt-1 nb-1">COPA PIRATA 2024.1!</a>
+                    <a href="https://copafacil.com/copauerjatleticapiratas" target="_blank" class="button nt-1 nb-1">COPA PIRATA 2024.1!</a>
                 </div>
             </div>
         </section>
